--- a/index/index.html
+++ b/index/index.html
@@ -159,7 +159,7 @@
 </div> 
 <!-- ---------------------------- -->      
       <footer>
-        <h3>&copy 2019 - Keayka Hang Si Lan & Thibault Decousus </h3>
+        <h3>&copy 2019 - Thibault Decousus </h3>
         </footer>
     
 
