--- a/index/index.html
+++ b/index/index.html
@@ -25,7 +25,6 @@
           </ul>
         </nav>
       </header>
-<!-- ----------------------------   -->
   
 <!-- ----------------------------   -->
 <div class="container">
@@ -34,26 +33,25 @@
      <div class="item">Designed just for you</div>
      <h3>Large and flexible to your needs </h3> 
       <figure>
-          <img src="Images/shridhar-gupta-dZxQn4VEv2M-unsplash.jpg" alt="coworkingplace">
+          <img src="Images/vladimir-proskurovskiy-TNJdsXC_wtY-unsplash.jpg" class="coworkingplace" alt="coworkingplace">
       <figcaption> At St Pierre  
       </figcaption>
       </figure>
    </div>
    <div class="space"id="opportunities">
       <div class="item"> start new business</div> 
-     <h3> Opportunities and news collaborations</h3><br>
+     <h3> Opportunities and news collaborations</h3>
        <figure>
-         <img src="Images/priscilla-du-preez-XkKCui44iM0-unsplash.jpg" alt="peopleatwork">
+         <img src="Images/priscilla-du-preez-XkKCui44iM0-unsplash.jpg" class="images" alt="peopleatwork">
         <figcaption> Meet friendly and inteligent people  </figcaption>
         </figcaption>
        </figure>
    </div>
-  
    <div class="space" id="bonus">
       <div class="item"> Services </div> 
-     <h3> wifi, healthy foods and plenty of awesome events will be offered</h3><br>
+     <h3> wifi, healthy foods and plenty of awesome events will be offered</h3>
        <figure>
-           <img src="Images/bernard-hermant-X0EtNWqMnq8-unsplash.jpg" alt="wifi">
+           <img src="Images/bernard-hermant-X0EtNWqMnq8-unsplash.jpg" class="images" alt="wifi">
          <figcaption> extra-bonus
          </figcaption>
        </figure>
@@ -62,7 +60,6 @@
 <!-- ----------------------------   -->
 <div class="container"> 
  <section id="blog">
-  
   <iframe width="560" height="315" src="https://www.youtube.com/embed/M908RNjj0n8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
 </div> 
@@ -114,7 +111,7 @@
  <section id="contact"> 
   <h3>Contact us</h3>
    <p>To give you the best answer, give us some informations about you</p>
-    <form id="form" action="https://www.freecodecamp.com/email-submit" method="GET">
+    <form id="form" method="GET">
      <div class="rowTab">
       <div class="labels">
        <label id="name-label" for="name">* Name: </label>
